# Autotts

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: docker.md  patterns.md
scripts/: preload_whisper_model.py
src/autobot_stt/: config.py  main.py
src/autobot_stt/dependencies/: __init__.py  auth.py  store.py
src/autobot_stt/models/: __init__.py  session.py
src/autobot_stt/routes/: __init__.py  sessions.py  stream.py
src/autobot_stt/services/: audio_decoder.py  llm_cleanup.py  whisper_service.py
src/autobot_stt/stores/: __init__.py  base.py  memory.py
tests/: conftest.py  test_app.py  test_audio_decoder.py  test_auth.py  test_config.py  test_dependencies_auth.py  test_dependencies_store.py  test_docker_config.py  test_finalize.py  test_health.py  test_preload_whisper_model.py  test_sessions.py  test_stores_memory.py  test_stream.py  test_whisper_service.py
tests/fixtures/: sample.webm
tests/integration/: conftest.py  test_session_lifecycle.py
