[project]
name = "autobot-stt"
dynamic = ["version"]
description = "Speech-to-text API for Autobot voice input"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "numpy",
    "faster-whisper",
]

[project.scripts]
autobot-stt = "autobot_stt.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/autobot_stt/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/autobot_stt"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
